Update countBadge CSS to prevent numbers from being broken onto several lines

--- a/src/vs/base/browser/ui/countBadge/countBadge.css
+++ b/src/vs/base/browser/ui/countBadge/countBadge.css
@@ -14,6 +14,7 @@
 	text-align: center;
 	display: inline-block;
 	box-sizing: border-box;
+	white-space: nowrap;
 }
 
 .monaco-count-badge.long {
